# iniciacao-cientifica-ufsc

./: .gitignore  README.md  simularrequest.py
backend/: index.js  package.json
backend/models/: sensorModel.js
codigo_rasppi4/: ACQUISITION_WITHOUT_INTERNET_WITH_THERMOCOUPLE.py  ACQUISITION_WITH_INTERNET_WITH_THERMOCOUPLE.py  clean_hall_gps
codigo_rasppi4/com_internet/: bluetooth_com_internet.py  main.py
codigo_rasppi4/sem_internet/: sem_net.py
codigo_rasppi4/sem_internet/com_bluetooth/: BLUETOOTH_SEM_INTERNET.py  BLUETOOTH_SEM_INTERNET_COM_DISPLAY.py  CONVERSOR_RFCOMM_COM_DISPLAY_BLUETOOTH_FUNCIONANDO_COM_INTERNET_COM_BLUETOOTH.py  CONVERSOR_RFCOMM_COM_DISPLAY_BLUETOOTH_FUNCIONANDO_COM_INTERNE_SEM_BLUETOOTH.py  CONVERSOR_RFCOMM_COM_DISPLAY_BLUETOOTH_FUNCIONANDO_SEM_INTERNET_COM_BLUETOOTH.py  CONVERSOR_RFCOMM_COM_DISPLAY_BLUETOOTH_FUNCIONANDO_SEM_INTERNET_SEM_BLUETOOTH.py  handle_sensors_module.py  limpar_dados_com_bluetooth.py  limpar_dados_com_conversor.py
frontend/vite-project/components/: Grafico.tsx  Sensor.tsx
frontend/vite-project/src/: App.tsx
lavisualizar/: README.md  dadosInicioTarde.csv  pubspec.yaml
lavisualizar/lib/: chart.dart  comparar.dart  comparation.dart  home.dart  main.dart  realTime.dart
lavisualizar/test/: widget_test.dart
rustfied/: Cargo.toml
rustfied/src/: lib.rs  main.rs  sensor.rs  utils.rs
url/: Cargo.toml
url/src/: main.rs
