[package]
name = "rustfied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth-serial-port = "0.6.0"
chrono = "0.4.40"
futures-util = "0.3.31"
i2cdev = "0.6.1"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serialport = "4.7.0"
tokio = { version = "1.43.0", features = ["full"] }
