[package]
name = "rustfied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.3.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
embedded-graphics = "0.8.1"
futures-util = "0.3.31"
i2cdev = "0.6.1"
linux-embedded-hal = "0.4.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
rppal = "0.22.1"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serialport = "4.7.0"
ssd1306 = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
